# sport_school

./: .env.sample  pyproject.toml
api/: serializers.py  urls.py  views.py
classes/: urls.py  views.py
classes/templates/classes/: class_confirm_delete.html  class_detail.html  class_form.html  class_list.html
config/: settings.py  urls.py
members/: urls.py  views.py
members/templates/members/: person_confirm_delete.html  person_detail.html  person_form.html  person_list.html
school/: admin.py  forms.py  models.py  urls.py  views.py
school/migrations/: 0001_initial.py  0002_alter_athlete_level.py  0003_alter_person_date_of_birth.py  0004_alter_person_options.py  0005_alter_family_family_name.py  0006_alter_family_family_name.py  0007_alter_familymember_relation.py  0008_group_athletes_alter_group_coaches_and_more.py  0009_alter_group_athletes_alter_group_coaches.py  0010_alter_athlete_options.py  0011_alter_trainingcamp_classes.py  0012_alter_trainingcamp_classes.py
school/templates/athletes/: edit_form.html
school/templates/school/: athlete_list.html  base.html  index.html
school/templates/school/includes/: header.html  light_mode_menu.html  menu.html
tg_bot/: bot.py  bot_test.py
users/: admin.py  models.py  urls.py  views.py
users/management/commands/: create_test_users.py  csu.py
users/migrations/: 0001_initial.py  0002_user_tg_first_name_user_tg_id_user_tg_last_name_and_more.py  0003_user_token.py
users/templates/: login.html  welcome.html
